# autoTrade

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  run.py
dashboard/: README.md  index.html
dashboard/css/: dashboard.css
dashboard/js/: api.js  charts.js  dashboard.js
docs/: api_doc.xml
setup_py/: FINAL_SETUP_INSTRUCTIONS.md  SETUP_GUIDE.md  add_demo_data.py  add_demo_trades.py  check_databases.py  create_trade_table.py  create_trade_table_final.py  setup_trade_history.py  setup_trade_history_final.py  setup_trade_history_simple.py  test_appwrite_integration.py
src/: __init__.py  main.py  trading_utils.py
src/routes/: balance_routes.py  dashboard_routes.py  webhook_routes.py
src/services/: trading_service.py
tests/: test_dashboard.py
