[tool.poetry]
name = "hyperliquid-trader"
version = "0.1.0"
description = "A simple trading server for Hyperliquid."
authors = ["Alain <alain@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
hyperliquid-python-sdk = "^0.20.0"
Flask = "^3.1.2"
appwrite = "^13.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"